remove importações desnecessárias e adiciona nomeLoja no DTO